<resources>
    <string name="app_name">Mail Watcher</string>
    <string name="action_settings">Settings</string>
    <string name="add_alert">Add alert</string>
    <string name="title_activity_alert_details">Alert Details</string>
    <string name="save">Save</string>
    <string name="alarm_tone">Ring:</string>
    <string name="select_alarm_tone">Select Alarm Tone</string>
    <string name="alert_name">Alert Name</string>
    <string name="account_name">Account</string>
    <string name="label_name">Folder:</string>
    <string name="email">Mail:</string>
    <string name="mail_alert">Mail Alert</string>
    <string name="dismiss">Dismiss</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_user">Domain\\User name</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="mailwatcher_exchange_account">Mail Watcher Exchange Account</string>
    <string name="not_selected">(not selected)</string>
    <string name="mail_folder">Mail folder</string>
    <string name="google_mail">Google Mail</string>
    <string name="microsoft_exchange">Microsoft Exchange</string>
    <string name="prompt_mail_server">Web Mail Server (https://...)</string>
    <string name="ignore_server_certificate">Ignore Server Certificate</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_check_mail_interval">Check mail interval in minutes</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_pick_account">Select Account</string>
    <string name="err_no_active_network">No active network</string>
    <string name="select">Select</string>

    <string name="never">(never)</string>
    <string name="none">(none)</string>
    <string name="account">Account:</string>
    <string name="folder">Folder:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="last_check">Last check:</string>
    <string name="filter_from">From filter:</string>
    <string name="filter_to">To filter:</string>
</resources>
