<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- These settings headers are only used on tablets. -->

    <header android:fragment="com.eleks.mailwatcher.SettingsActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_general" android:icon="@drawable/ic_info_black_24dp" >
        <extra android:name="bind_summary_preference_names" android:value="check_mail_interval" />
    </header>

    <header android:fragment="com.eleks.mailwatcher.SettingsActivity$NotificationPreferenceFragment"
        android:title="@string/pref_header_notifications"
        android:icon="@drawable/ic_notifications_black_24dp" >
        <extra android:name="bind_summary_preference_names" android:value="check_mail_interval" />
    </header>

    <header android:fragment="com.eleks.mailwatcher.SettingsActivity$DataSyncPreferenceFragment"
        android:title="@string/pref_header_data_sync" android:icon="@drawable/ic_sync_black_24dp" >
        <extra android:name="bind_summary_preference_names" android:value="check_mail_interval" />
    </header>

</preference-headers>
